added openGraph and twitter tags so it looks spec-tac-u-lar in slack shares

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://typosmag.com/">
+  <meta property="og:title" content="TYPOS Magazine">
+  <meta property="og:description" content="Current Issue: Issue 2, February 2017 on newsstands now! Featuring poetry, short stories, author factoids, art, and much more. Pick up an issue today!">
+  <meta property="og:image" content="https://dillonchr.github.io/typosdotcom/typos-handbill-flyer-promotion-free-followers-fast-cash-mario-last-level-fire.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:label1" content="Issue No. 2">
+  <meta name="twitter:data1" content="February 2017">
   <title>TYPOS :: The Magazine for Interesting People (read &#8220;cool&#8221; people)</title>
   <style type="text/css">
 	.buy__url {
