fixed image url in openGraph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url" content="http://typosmag.com/">
   <meta property="og:title" content="TYPOS Magazine">
   <meta property="og:description" content="Current Issue: Issue 2, February 2017 on newsstands now! Featuring poetry, short stories, author factoids, art, and much more. Pick up an issue today!">
-  <meta property="og:image" content="https://dillonchr.github.io/typosdotcom/typos-handbill-flyer-promotion-free-followers-fast-cash-mario-last-level-fire.jpg">
+  <meta property="og:image" content="http://typosmag.com/typos-handbill-flyer-promotion-free-followers-fast-cash-mario-last-level-fire.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:label1" content="Issue No. 2">
   <meta name="twitter:data1" content="February 2017">
