--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://typosmag.com/">
   <meta property="og:title" content="TYPOS Magazine">
-  <meta property="og:description" content="Current Issue: Issue 2, February 2017 on newsstands now! Featuring poetry, short stories, author factoids, art, and much more. Pick up an issue today!">
+  <meta property="og:description" content="Current Issue: Issue 2 in newsstands now! Featuring poetry, short stories, author factoids, art, and much more. Pick up an issue today and be cooler than everybody.">
   <meta property="og:image" content="http://typosmag.com/typos-handbill-flyer-promotion-free-followers-fast-cash-mario-last-level-fire.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:label1" content="Issue No. 2">
   <meta name="twitter:data1" content="February 2017">
+  <meta name="twitter:label2" content="Issue No. 1">
+  <meta name="twitter:data2" content="Limited stock">
   <title>TYPOS :: The Magazine for Interesting People (read &#8220;cool&#8221; people)</title>
   <style type="text/css">
 	.buy__url {
