--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		margin-bottom: 2em;
 	}
 	
-	@media (min-width: 1024px) {
+	@media (min-width: 768px) {
 		body {
 			font-size: 18px;
 			width: 800px;
@@ -100,6 +100,7 @@
 		
 		.logo {
 			margin-top: 50px;
+			width: 600px;
 		}
 	}
   </style>
