--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 		<h2 class="detail__header">About TYPOS</h2>
 		<p class="detail__body">TYPOS is a homegrown passion project putting together all the best minds (ours, duh) to drum up world class stories and articles. We started TYPOS because we had never attempted anything like it and we were fascinated with books of all kinds. It seemed like a fun thing to try and we were just full of ideas. So we&#8217;ve learned a lot and tried out a lot. But probably the most fun and exciting part has been creating content to share with everyone. That&#8217;s been a fulfillment all its own.</p>
 	</section>
+	<div class="submit-button">
+		<a class="submit-button__link" href="https://typos.typeform.com/to/antWKa">Submit your stories or artwork</a>
+	</div>
 	<section class="detail">
-		<h2 class="detail__header"><a href="https://typos.typeform.com/to/antWKa">Submit your stories or artwork</a></h2>
+		<h2 class="detail__header">Calling all creators!</h2>
 		<p class="detail__body">We welcome all authors and artists seeking publication to submit content. We are always looking for passionate creators to share their best work. You can submit by filling out <a href="https://typos.typeform.com/to/antWKa">this form</a> or just email us at <a href="mailto:editors@typosmag.com">editors@typosmag.com</a> for more info.</p>
 		<p class="detail__body">We aren&#8217;t stingy with spots either. If you have a big story that needs a few pages that&#8217;d be awesome. If you want to make a drawing for a cover, WE WOULD &hearts; THAT!</p>
 		<h3 class="detail__subheader">Artwork Content Guidelines</h3>
@@ -49,7 +52,7 @@
 			<li class="detail__list-item"><a href="https://goo.gl/maps/zXHoQputrcx" title="Google Maps Link to Bound for Glory Books">Bound for Glory Books</a></li>
 		</ul>
 	</section>
-	<footer>the gilded lion press &copy;1988 tulsa, ok</footer>
+	<footer class="footer">the gilded lion press &copy;1988 tulsa, ok</footer>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
