--- a/index.html
+++ b/index.html
@@ -28,26 +28,28 @@
             <use xlink:href="#logo" />
         </svg>
         <h2 class="header__subheading">The magazine for interesting people</h2>
+        <p class="header__blurb">TYPOS is a Tulsa-based zine that relies on the support of its contributors. Its rhythm is chaotic and disjointed. It's a literature magazine for connoisseurs of cool. Ranging from short fiction about Pepto-Bismol pink walls to moving poetry about cats to lazy doodles passed off as comics. Our targeted feel is abstractedly absurd to the point that you're not quite sure you get it or not. Above all though, TYPOS's main mission is to give people an opportunity to create something amazing.</p>
         <div class="cta cta--header">
             <a class="cta__link" href="previews/issue-05-preview.pdf">Preview current issue</a>
         </div>
     </header>
     <section class="detail">
-        <h2 class="detail__header">About TYPOS</h2>
-        <p class="detail__body">TYPOS is a homegrown passion project putting together all the best minds to drum up world class stories and articles. We started TYPOS because we had never attempted anything like it and we were fascinated with books of all kinds. It seemed like a fun thing to try and we were just full of ideas. So we&#8217;ve learned a lot and tried out a lot. But probably the most fun and exciting part has been creating content to share with everyone. That&#8217;s been a fulfillment all its own.</p>
-    </section>
-    <div class="cta">
-        <a class="cta__link" href="https://typos.typeform.com/to/antWKa">Submit work for the next TYPOS</a>
-    </div>
-    <section class="detail">
-        <h2 class="detail__header">Calling all creators!</h2>
-        <p class="detail__body">We welcome all authors and artists seeking publication to submit content. We are always looking for passionate creators to share their best work. You can submit by filling out <a href="https://typos.typeform.com/to/antWKa">this form</a> or just email us at <a href="mailto:editors@typosmag.com">editors@typosmag.com</a> for more info.</p>
-        <p class="detail__body">We aren&#8217;t stingy with spots either. If you have a big story that needs a few pages that&#8217;d be awesome. If you want to make a drawing for a cover, WE WOULD &#128155; THAT!</p>
-        <h3 class="detail__subheader">Artwork Content Guidelines</h3>
-        <p class="detail__body">TYPOS is currently only printed in black-and-white on a home laserjet. So we really want simple line drawings and things that really pop in monochrome.</p>
-        <h3 class="detail__subheader">Text Content Guidelines</h3>
-        <p class="detail__body">When it comes to stories or articles, we prefer to receive plain text versions. Ideally content would be submitted through the link above and pasted in the form. Receiving plain text lets us flow the layout as needed or based on a whim.</p>
-        <p class="detail__body">In terms of the content itself, the only rule we have is that whatever you write has to be passionate. We want to really believe that you feel the text you send us is a self-portrait. We crave content that embodies passion and people&#8217;s ideas. Don&#8217;t worry about style or grammar. Just let it all out!</p>
+        <div class="cta detail__col detail__col--centered">
+            <a class="cta__link" href="https://typos.typeform.com/to/antWKa">Submit works</a>
+        </div>
+        <div class="detail__col">
+            <h3 class="detail__subheader">Calling all creators!</h3>
+            <p class="detail__body">We welcome all authors and artists seeking publication to submit content. We are always looking for passionate creators to share their best work. You can submit by filling out <a href="https://typos.typeform.com/to/antWKa">this form</a> or just email us at <a href="mailto:editors@typosmag.com">editors@typosmag.com</a> for more info.</p>
+            <p class="detail__body">We aren&#8217;t stingy with spots either. If you have a big story that needs a few pages that&#8217;d be awesome. If you want to make a drawing for a cover, WE WOULD &#128155; THAT!</p>
+            
+        </div>
+        <div class="detail__col">
+            <h3 class="detail__subheader">Artwork Content Guidelines</h3>
+            <p class="detail__body">TYPOS is currently only printed in black-and-white on a home laserjet. So we really want simple line drawings and things that really pop in monochrome.</p>
+            <h3 class="detail__subheader">Text Content Guidelines</h3>
+            <p class="detail__body">When it comes to stories or articles, we prefer to receive plain text versions. Ideally content would be submitted through the link above and pasted in the form. Receiving plain text lets us flow the layout as needed or based on a whim.</p>
+            <p class="detail__body">In terms of the content itself, the only rule we have is that whatever you write has to be passionate. We want to really believe that you feel the text you send us is a self-portrait. We crave content that embodies passion and people&#8217;s ideas. Don&#8217;t worry about style or grammar. Just let it all out!</p>
+        </div>
     </section>
     <section class="detail">
         <h2 class="detail__header">Buy an issue &mdash; $5</h2>
