--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
         </div>
     </header>
     <section class="detail">
-        <div class="cta detail__col detail__col--centered">
-            <a class="cta__link" href="https://typos.typeform.com/to/antWKa">Submit works</a>
+        <div class="detail__col">
+        <img class="detail__image" src="images/submit-image.png" alt="Submit works for the next issue of TYPOS" />
         </div>
         <div class="detail__col">
             <h3 class="detail__subheader">Calling all creators!</h3>
             <p class="detail__body">We welcome all authors and artists seeking publication to submit content. We are always looking for passionate creators to share their best work. You can submit by filling out <a href="https://typos.typeform.com/to/antWKa">this form</a> or just email us at <a href="mailto:editors@typosmag.com">editors@typosmag.com</a> for more info.</p>
             <p class="detail__body">We aren&#8217;t stingy with spots either. If you have a big story that needs a few pages that&#8217;d be awesome. If you want to make a drawing for a cover, WE WOULD &#128155; THAT!</p>
-            
+            <div class="cta">
+                <a class="cta__link" href="https://typos.typeform.com/to/antWKa">Submit works</a>
+            </div>
         </div>
         <div class="detail__col">
             <h3 class="detail__subheader">Artwork Content Guidelines</h3>
@@ -52,24 +54,30 @@
         </div>
     </section>
     <section class="detail">
-        <h2 class="detail__header">Buy an issue &mdash; $5</h2>
-        <h3 class="detail__subheader">Online</h3>
-        <p class="detail__body">You can buy an issue from here directly:</p>
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="QDA7PQ39UJTAU">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
-        <p class="detail__body">Or you can buy it now
-            <a href="https://www.etsy.com/listing/495820468/typos-2-the-magazine-for-interesting?ref=typosdotcom" class="detail__link">on Etsy</a>
-        </p>
-        <h3 class="detail__subheader">At a local bookstore</h3>
-        <p class="detail__body">We currently carried in a few bookstores in Tulsa! We&#8217;re working to add more to the list. You can pick up an issue <abbr title="In Real Life">irl</abbr> at:</p>
-        <ul class="detail__list">
-            <li class="detail__list-item"><a href="https://goo.gl/maps/Q6ywvatbzmv" title="Google Maps Link to Decopolis">Decopolis</a></li>
-            <li class="detail__list-item"><a href="https://goo.gl/maps/zXHoQputrcx" title="Google Maps Link to Bound for Glory Books">Bound for Glory Books</a></li>
-        </ul>
+        <div class="detail__col">
+            <h3 class="detail__subheader">Buy an Issue Online</h3>
+            <p class="detail__body">You can buy an issue from here directly:</p>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="QDA7PQ39UJTAU">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            <p class="detail__body">Or you can buy it now
+                <a href="https://www.etsy.com/listing/495820468/typos-2-the-magazine-for-interesting?ref=typosdotcom" class="detail__link">on Etsy</a>
+            </p>
+        </div>
+        <div class="detail__col">
+            <h3 class="detail__subheader">At a local bookstore</h3>
+            <p class="detail__body">We currently carried in a few bookstores in Tulsa! We&#8217;re working to add more to the list. You can pick up an issue <abbr title="In Real Life">irl</abbr> at:</p>
+            <ul class="detail__list">
+                <li class="detail__list-item"><a href="https://goo.gl/maps/Q6ywvatbzmv" title="Google Maps Link to Decopolis">Decopolis</a></li>
+                <li class="detail__list-item"><a href="https://goo.gl/maps/zXHoQputrcx" title="Google Maps Link to Bound for Glory Books">Bound for Glory Books</a></li>
+            </ul>
+        </div>
+        <div class="detail__col">
+            <img class="detail__image" src="images/buy-image.png" alt="Buy an issue" />
+        </div>
     </section>
     <footer class="footer">the gilded lion press &copy;1988 tulsa, ok</footer>
     <script>
