--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://typosmag.com/">
   <meta property="og:title" content="TYPOS Magazine">
-  <meta property="og:description" content="Current Issue: Issue 5 in newsstands May 1st! Back at it again with the jammin' stories and objets d'art.">
-  <meta property="og:image" content="http://typosmag.com/images/typos-issue-5-cover-min.jpg">
+  <meta property="og:description" content="Current Issue: Issue 6 - June 2017 - Golden Lightning">
+  <meta property="og:image" content="http://typosmag.com/images/typos-issue-6-cover-min.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:label1" content="Issue No. 4">
-  <meta name="twitter:data1" content="April 2017">
-  <meta name="twitter:label2" content="Issue No. 3">
-  <meta name="twitter:data2" content="March 2017">
+  <meta name="twitter:label1" content="Issue No. 5">
+  <meta name="twitter:data1" content="May 2017 - Orange Gulp">
+  <meta name="twitter:label2" content="Issue No. 4">
+  <meta name="twitter:data2" content="April 2017 - Jerry Cover">
   <title>TYPOS &#8212; The Magazine for Interesting People &#128526;</title>
   <link rel="stylesheet" href="main.css">
 </head>
