--- a/index.html
+++ b/index.html
@@ -4,16 +4,6 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://typosmag.com/">
-  <meta property="og:title" content="TYPOS Magazine">
-  <meta property="og:description" content="Current Issue: Issue 6 - June 2017 - Golden Lightning">
-  <meta property="og:image" content="http://typosmag.com/images/typos-issue-6-cover-min.jpg">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:label1" content="Issue No. 5">
-  <meta name="twitter:data1" content="May 2017 - Orange Gulp">
-  <meta name="twitter:label2" content="Issue No. 4">
-  <meta name="twitter:data2" content="April 2017 - Jerry Cover">
   <title>TYPOS &#8212; The Magazine for Interesting People &#128526;</title>
   <link rel="stylesheet" href="main.css">
 </head>
@@ -28,59 +18,8 @@
             <use xlink:href="#logo" />
         </svg>
         <h2 class="header__subheading">The magazine for interesting people</h2>
-        <p class="header__blurb">TYPOS is a Tulsa-based zine that relies on the support of its contributors. Its rhythm is chaotic and disjointed. It's a literature magazine for connoisseurs of cool. Ranging from short fiction about Pepto-Bismol pink walls to moving poetry about cats to lazy doodles passed off as comics. Our targeted feel is abstractedly absurd to the point that you're not quite sure you get it or not. Above all though, TYPOS's main mission is to give people an opportunity to create something amazing.</p>
-        <div class="cta cta--header">
-            <a class="cta__link" href="previews/issue-06-preview.pdf" title="June 2017">Preview issue 6</a>
-        </div>
+        <p class="header__blurb">We are indefinitely postponing issue 7 and taking a hiatus. Thank you for the wonderful time!</p>
     </header>
-    <section class="detail">
-        <div class="detail__col">
-        <img class="detail__image" src="images/submit-image.gif" alt="Submit works for the next issue of TYPOS" />
-        </div>
-        <div class="detail__col">
-            <h3 class="detail__subheader">Content Creators:</h3>
-            <p class="detail__body">We welcome all authors and artists seeking publication to submit content. We are always looking for passionate creators to share their best works. Currently we are interested in <strong>everything</strong>. Seriously. We want short fiction, poetry, doodles, photos, games, interesting non-fiction topics, howtos, memoirs, or interviews. Everything! The only requirements we put on works submitted is that it can truly be called a self-portrait regardless of its content. We are looking to publish subjects that people are purely driven by passion to create.</p>
-            <p class="detail__body">And we aren&#8217;t stingy with spots either. If you have a big story that needs a few pages that&#8217;d be awesome. If you want to make a drawing for a cover, WE WOULD &#128155; THAT!</p>
-        </div>
-        <div class="detail__col">
-            <h3 class="detail__subheader">Artwork Content Guidelines</h3>
-            <p class="detail__body">TYPOS is currently only printed in black-and-white on a home laserjet. So we usually look for simple line drawings and things that really pop in monochrome. But we are accepting anything you create that moves you. For now, please submit all image-based content directly to our email.</p>
-            <div class="cta cta--small">
-                <a class="cta__link" href="mailto:editors@typosmag.com?subject=Art+Submission&body=Please+include+title+of+work(s)">Submit Artwork</a>
-            </div>
-            <h3 class="detail__subheader">Text Content Guidelines</h3>
-            <p class="detail__body">When it comes to stories or articles, we prefer to receive plain text versions. Ideally content would be submitted through the form below. Receiving plain text lets us flow the layout as needed or based on a whim. Don&#8217;t worry about style or grammar. Just let it all out!</p>
-            <div class="cta cta--small">
-                <a class="cta__link" href="https://typos.typeform.com/to/antWKa">Submit Text</a>
-            </div>
-        </div>
-    </section>
-    <section class="detail detail--flipped-desktop">
-        <div class="detail__col">
-            <img class="detail__image" src="images/buy-image.gif" alt="Buy an issue" />
-        </div>
-        <div class="detail__col">
-            <h3 class="detail__subheader">Buy an Issue Online</h3>
-            <img class="detail__image" src="images/typos-issue-6-cover-min.jpg" />
-            <p class="detail__body">You can buy issue 6 (June 2017) from here directly:</p>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="QDA7PQ39UJTAU">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-            </form>
-            <p class="detail__body">Or you can buy it now
-                <a href="https://www.etsy.com/listing/537291189/typos-6-the-magazine-for-interesting?ref=typosdotcom" class="detail__link">on Etsy</a>
-            </p>
-        </div>
-        <div class="detail__col">
-            <h3 class="detail__subheader">At a local bookstore</h3>
-            <p class="detail__body">We currently carried in a <del>few</del> bookstore in Tulsa! We&#8217;re working to add more to the list. You can pick up an issue <abbr title="In Real Life">irl</abbr> at:</p>
-            <ul class="detail__list">
-                <li class="detail__list-item"><a href="https://goo.gl/maps/Q6ywvatbzmv" title="Google Maps Link to Decopolis">Decopolis</a></li>
-            </ul>
-        </div>
-    </section>
     <footer class="footer">the gilded lion press &copy;1988 tulsa, ok</footer>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
